index.css
html, body, div, canvas, h1, h2, h3, p, ul, li {
  padding: 0;
  margin: 0;
  border: 0;
  background: transparent;
}

ul {
  list-style: none;
}

body {
  margin: auto;
  font-family: 'Montserrat', sans-serif;
  font-weight: 400;
}

a {
  color: rgb(255,105,180);
}

h3 {
  font-size: 30px;
}

input, textarea {
  width: 300px;
}

span {
  font-size: 17px;
  font-style: italic;
}

.group:after {
  content: "";
  display: block;
  clear: both;
}

.header {
  font-weight: 700;
  box-sizing: border-box;
  text-align: center;
  height: 350px;
  width: 100%;
  padding-top: 50px;
  color: white;
  background: gray;
  background-image: url("http://o.homedsgn.com/wp-content/uploads/2011/04/NYC-at-Night-06.jpg");
  background-size: cover;
  background-repeat: no-repeat;
}

.hello {
  padding-top: 25px;
  font-size: 100px;
  text-transform: uppercase;
}

main {
  padding: 50px;
}

.about-me {
  max-width: 700px;
  margin: auto;
}

.about-me h3 {
  margin-bottom: 20px;
}

.about-me p {
  margin-bottom: 20px;
}

.skills {
  margin: 20px auto;
  max-width: 700px;
}

.skill:first-child {
  padding-left: 0;
}

.skill {
  float: left;
  text-align: center;
  padding-right: 20px;
  padding-top: 20px;
  font-size: 93px;
}

.projects {
  margin: 20px auto;
  max-width: 700px;
}

.project {
  box-sizing: border-box;
  padding: 30px 0px;
  padding-top: 0;
  border-bottom: 3px solid black;
  position: relative;
}

.project:first-child {
  margin-top: 0;
}

.project-header p {
  float: left;
}

.project-links {
  float: right;
}

.project-preview {
  display: block;
  height: 200px;
  width: 200px;
  border: 3px solid black;
  float: left;
}

.view-project {
  box-sizing: border-box;
  background: transparent;
  color: transparent;
  position: absolute;
  left: 0;
  width: 206px;
  height: 206px;
  padding-top: 95px;
  text-align: center;
}

.view-project:hover {
  background: rgba(100,100,100,.75);
  color: white;
  text-decoration: none;
  text-transform: uppercase;
}

.project-description {
  box-sizing: border-box;
  float: right;
  width: 350px;
  padding-left: 20px;
}

.resume {
  padding: 20px;
  margin: auto;
  margin-top: 20px;
  display: block;
  max-width: 650px;
}

.contact {
  padding: 20px;
  margin: auto;
  margin-bottom: 20px;
  display: block;
  max-width: 650px;
}

.social {
  width: 132px;
  margin: 20px auto;
  border-left: 0;
}

.social li {
  box-sizing: border-box;
  float: left;
  font-size: 10px;
  width: 40px;
  height: 40px;
  background: rgba(255, 255, 255, .5);
  transition: background .75s;
}

.social li:hover {
  background: rgba(255, 255, 255, .8);
}

.github {
  padding: 4px;
}

.linkedin {
  padding-top: 6px;
}

.twitter {
  padding-top: 5px;
}

.twitter-pic {
  width: 30px;
  height: 30px;
}

.form {
  background: yellow;
}

@media (max-width: 800px) {
  .hello {
    font-size: 75px;
    padding-top: 45px;
  }

  .skills-list {
    width: 500px;
    margin: auto;
  }
}

@media (max-width: 625px) {
  .hello {
    font-size: 45px;
    padding-top: 55px;
  }

  .project-description {
    width: 275px;
  }
}

